# ImHex-Plugin-Oracle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: update.yml
romfs/lang/: en_US.json
source/: plugin_example.cpp  plugin_oracle.cpp
